# AI_assistant_backend

./: .env-template  .gitignore  Dockerfile  README.md  S3_bucket.py  SSEStreamer.py  ai_assistant.py  data.py  database.py  db.py  email_assistant.py  main.py  pyproject.toml  rag_search.py  requirements.txt  test_db_url.py  tools.py  vectorstore_manager.py
app/: __init__.py  config.py  dependencies.py
app/assistants/: ai_assistant.py  chat_title.py  email_assistant.py
app/data/: data.py  system_prompts_data.py
app/db/: database.py  vectorstore_manager.py
app/mcp/: client.py
app/mcp/servers/: math_server.py
app/rag/: rag_search.py
app/routers/: cache.py  chat.py  chats.py  email.py  general.py  milvus.py  rag.py
app/services/: chat_service.py
app/tools/: tools.py
app/utils/: file_helpers.py  rag_helpers.py
routers/: chats.py
services/: chat_service.py
