[project]
name = "ai-assistant-backend"
version = "0.1.0"
description = "FastAPI-powered backend for email tone transformation (professional, friendly, persuasive) and a multi-model AI assistant. Features advanced prompt engineering, OpenAI integration, and dynamic model selection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "langchain-anthropic>=1.0.3",
    "langchain-openai>=1.0.2",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "sse-starlette>=3.0.3",
    "tavily-python>=0.7.12",
    "typing>=3.10.0.0",
    "uvicorn>=0.38.0",
]
